# ficl

./: .gitignore  CMakeLists.txt  Makefile.Darwin_x86_64  Makefile.armv6l  Makefile.darwin  Makefile.linux  README.md  addWord.sh  athExtras.cpp  athExtras.h  athTimer.c  athTimer.h  basic.mk  build.sh  dbTest.fth  extras.c  extras.mk  extras1.cpp  extras1.h  ficl.h  fileaccess.c  install.sh  linux.h  main.c  mkFiclPlatform.sh  mqttHelper.cpp  mqttHelper.h  plc.mk  primitives.c  profile.mk  rpi0.mk  rpi3.mk  smallest.cpp  smallest.h  threadTest.fth  timerClass.cpp  timerClass.h  timerTst.cpp  timerTst1.cpp  tst.fth  (+1 more)
softcore/: .gitignore  Makefile
